--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "soal2",
   "version": "0.1.0",
+  "homepage": "https://bagusnurhudaui.github.io/cards-react-sekolahmu",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -12,6 +13,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
